--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,6 +90,10 @@ a {
   text-decoration: none;
 }
 
+.error {
+  color: #da2c2c;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
