--- a/src/components/News/news.module.css
+++ b/src/components/News/news.module.css
@@ -19,6 +19,15 @@
   margin-bottom: 12px;
 }
 
+.loader {
+  height: 48px;
+  text-align: center;
+  background-color: #DDD;
+  padding-top: 16px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
 /* Responsive styling */
 @media (max-width: 1200px) {
   .gridContainer {
