--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,142 +1,3 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-serif: "Times New Roman", Georgia, serif;
-  --font-sans: Arial, Helvetica, sans-serif;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0; /* Text color */
-  --heading-rgb: 33, 33, 33; /* Heading color */
-  --button-bg: 51, 51, 51 ; /* Button background color */
-  --button-text: 255, 255, 255; /* Button text color */
-  --button-border: 0, 97, 255; /* Button border color */
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255; /* Text color for dark mode */
-    --heading-rgb: 255, 255, 255; /* Heading color for dark mode */
-    --button-bg: 0, 97, 255; /* Dark mode button background color */
-    --button-text: 255, 255, 255; /* Dark mode button text color */
-    --button-border: 0, 122, 255; /* Dark mode button border color */
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-family: var(--font-serif); /* Apply serif font to body text */
-  color: rgb(var(--foreground-rgb)); /* Text color */
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-serif); /* Apply serif font to headings */
-  color: rgb(var(--heading-rgb)); /* Heading color */
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-button {
-  background-color: rgb(var(--button-bg));
-  color: rgb(var(--button-text));
-  border: 1px solid rgb(var(--button-border));
-  border-radius: var(--border-radius);
-  padding: 10px 20px;
-  font-family: var(--font-sans); /* Use sans-serif for button text */
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s, border-color 0.3s;
-}
-
-button:hover,
-button:focus {
-  background-color: rgb(64, 64, 64);
-  border-color: rgb(34, 34, 34);
-}
-
-button:active {
-  background-color: rgb(100, 100, 100);
-  border-color: rgb(32, 32, 32);
-}
-
-.error-field {
-  font-size: 12px;
-  color: #da2c2c;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
